# perimeter-mg

./: .clang-format  .gitignore  CMakeLists.txt  PLAN.md  README.md
.github/: CONTEXT.md  PLAN.md  copilot-instructions.md
docs/: CHECKPOINT_FORMAT.md  CHECKPOINT_USAGE.md  README.md  README_VISUALIZE.md  average_solve_times.csv
include/perimeter/core/: Agent.h  AgentState.h  AgentType.h  WorldState.h
include/perimeter/environment/: Action.h  Initialization.h  Movement.h  Simulator.h  Transition.h
include/perimeter/geometry/: Grid.h  Hex.h  HexGrid.h
include/perimeter/learning/: correlated_equilibrium_solver.h  joint.h  nash_equilibrium_solver.h  nash_q_learning.h  qtable_checkpoint.h  simple_game_solver_interface.h  single_agent_simple_game_policy.h
include/perimeter/visualization/: AsciiViewer.h  JsonViewer.h  ViewerBackend.h
scripts/: parse_qtable.py  solve_times_plotter.py  visualize_sim.py
src/: main.cpp
src/core/: Agent.h  AgentState.h  AgentType.h  WorldState.cpp  WorldState.h
src/environment/: Action.h  Initialization.cpp  Initialization.h  Movement.cpp  Movement.h  Simulator.cpp  Simulator.h  Transition.cpp  Transition.h
src/geometry/: Grid.h  Hex.cpp  Hex.h  HexGrid.cpp  HexGrid.h
src/learning/: correlated_equilibrium_solver.cpp  joint.cpp  nash_equilibrium_solver.cpp  nash_q_learning.cpp  qtable_checkpoint.cpp  single_agent_simple_game_policy.cpp
src/visualization/: AsciiViewer.cpp  AsciiViewer.h  JsonViewer.cpp  JsonViewer.h  ViewerBackend.h
tests/: agent_interface_test.cpp  hex_geometry_test.cpp  initialization_test.cpp  joint_test.cpp  movement_test.cpp  nash_equilibrium_solver_test.cpp  nash_q_learning_test.cpp  qtable_checkpoint_test.cpp  simulator_test.cpp  single_agent_simple_game_policy_test.cpp  transition_test.cpp  visualization_test.cpp  world_state_test.cpp
